--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 
     <h1>Enter Password</h1>
-    <p>Hint: the loyl</p>
+    <p>Hint: the love of my life</p>
     <input type="password" id="passwordInput" placeholder="Password">
     <button onclick="checkPassword()">Submit</button>
 
     <div id="willSection">
-        <h2>Write Your Will</h2>
+        <h2>for you merve</h2>
         <textarea placeholder="just in case, merve
 
 i don’t know how to write poems
