--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ that’s all i wanted to say
 i love you
 and i adore you
 no matter what
-I don’t know if words are ever enough for feelings like this, but I had to try. Merve, you became the most important part of my life without even trying. You were just you — and somehow that changed everything in me. I used to hide my heart behind jokes or being rough with you, and now all I want is to protect your smile like it’s the last light left in the world. I don’t think I deserve you, but I’m so damn grateful that, for a moment in this life, I got to love you and be loved by you. If something happens to me, please know that I was never afraid to go — only afraid you wouldn’t know how deep my love runs for you. It’s forever, Merve. It always will be."></textarea>
+I don’t know if words are ever enough for feelings like this, but I had to try. Merve, you became the most important part of my life without even trying. You were just you — and somehow that changed everything in me. I used to hide my heart behind jokes or being rough with you, and now all I want is to protect your smile like it’s the last light left in the world. I don’t think I deserve you, but I’m so damn grateful that, for a moment in this life, I got to love you and be loved by you. If something happens to me, please know that I was never afraid to go — only afraid you wouldn’t know how deep my love runs for you. It’s forever, Merve. It always will be.
+            i dont know what to gift you now, but who knows what im planning to do for you? maybe im making a very big project just for you? who knows :p also i spent like weeks on this yk and ts so corny sob"></textarea>
     </div>
 
     <script>
