--- a/index.html
+++ b/index.html
@@ -89,7 +89,69 @@ that’s all i wanted to say
 i love you
 and i adore you
 no matter what
-I don’t know if words are ever enough for feelings like this, but I had to try. Merve, you became the most important part of my life without even trying. You were just you — and somehow that changed everything in me. I used to hide my heart behind jokes or being rough with you, and now all I want is to protect your smile like it’s the last light left in the world. I don’t think I deserve you, but I’m so damn grateful that, for a moment in this life, I got to love you and be loved by you. If something happens to me, please know that I was never afraid to go — only afraid you wouldn’t know how deep my love runs for you. It’s forever, Merve. It always will be.  i dont know what to gift you now, but who knows what im planning to do for you? maybe im making a very big project just for you? who knows :p also i spent like weeks on this yk and ts so corny sob"></textarea>
+
+and i don’t know if words are ever enough for feelings like this
+but i had to try
+because if i didn’t, my chest might just crack open
+from holding it in
+
+merve, you became the most important part of my life without even trying
+you were just you — and somehow that changed everything in me
+i used to hide my heart behind jokes or being rough with you
+and now all i want is to protect your smile like it’s the last light left in the world
+i don’t think i deserve you
+but i’m so damn grateful that, for a moment in this life
+i got to love you
+and be loved by you
+
+and if something happens to me
+please know that i was never afraid to go — only afraid you wouldn’t know
+how deep my love runs for you
+it’s forever, merve
+it always will be
+
+i don’t know what to gift you now
+but who knows what i’m planning to do for you?
+maybe i’m making a very big project just for you?
+who knows :p
+also i spent like weeks on this yk
+and ts so corny sob
+
+but also
+i don’t care if it’s corny
+because loving you cracked me open
+turned me from someone who used to swallow feelings
+into someone who lets them spill
+even if they’re messy
+even if they make me cry while writing this
+even if they sound like too much
+
+because you deserve too much
+you deserve love that overflows, that can’t be contained
+love that feels like sunlight breaking through every dark corner
+and that’s what you are to me
+the light i didn’t know i needed
+the warmth i didn’t know i was missing
+until you showed up
+and suddenly nothing else mattered as much
+
+so yeah, maybe i don’t know poems
+maybe i don’t have the perfect gift yet
+but i have this love
+and it’s huge
+and clumsy
+and forever
+and yours
+
+and if my voice ever goes quiet
+if my hands ever stop texting
+or my face ever disappears from your screen
+please remember this:
+my love didn’t go anywhere
+it’s stitched into the air you breathe
+it’s waiting in every sunrise you smile at
+it’s forever, merve
+it always will be"></textarea>
     </div>
 
     <script>
