--- a/index.html
+++ b/index.html
@@ -151,7 +151,60 @@ my love didn’t go anywhere
 it’s stitched into the air you breathe
 it’s waiting in every sunrise you smile at
 it’s forever, merve
-it always will be"></textarea>
+it always will be
+
+and if time doesn’t let me stay
+just know that i will always be somewhere, loving you
+in the sound of the wind on a cold day
+in the quiet moments when you’re alone and think of me
+i’ll be in the way your heart skips a beat
+whenever you catch yourself smiling at a memory
+
+i wish i could have given you more time
+to show you everything
+to let you see the parts of me i hid
+but if i didn’t get to do that
+if my time runs out before i tell you all the things i wanted to
+just know this:
+the love i have for you is a promise
+a promise i never wanted to break
+but sometimes life is cruel
+and it doesn’t ask for permission
+so if the world decides it’s time for me to go
+please believe that it wasn’t my choice
+but my love for you? that’s mine
+and i’m leaving it here with you
+
+when you miss me, let yourself miss me
+feel everything
+cry if you need to
+but also
+live, okay?
+live like i never could
+live the way i always wished i could have
+without fear
+without holding back
+
+because you are everything i couldn’t be
+and i’ll always be proud of the love we shared
+even if it didn’t last forever in the way we wanted it to
+
+so just... just keep being you
+and know that i’ll always be with you
+in every tear
+in every laugh
+in every quiet moment you think of me
+you were my everything
+and i will always, always love you
+forever
+
+and if you think of me in the dark
+if you feel that ache in your chest when you miss me
+just remember:
+that’s love too
+that’s me, still here with you
+still loving you
+forever, merve"></textarea>
     </div>
 
     <script>
